[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptopulse"
version = "0.2.0"
description = "High-performance, global cryptocurrency CLI tool with high-precision financial logic."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "CryptoPulse Team" }
]
dependencies = [
    "typer[all]",
    "rich",
    "httpx",
    "pydantic",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "respx",
]

[project.scripts]
cryptopulse = "cryptopulse.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
